more words on page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <div id="output">word</div>
   <div id="etymologies">ety.</div>
+  <div id="languages">languages</div>
   <div id="countries">countries</div>
 
   <script src="./src/scripts/countries.js">
