got time to work

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <div id="etymologies">ety.</div>
   <div id="languages">languages</div>
   <div id="countries">countries</div>
+  <div id="time">time</div>
 
   <script src="./src/scripts/countries.js">
   </script>
