--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <!-- <div class="img-box">
-  <iframe src="https://momento360.com/e/u/64cc4f5d66be4c7b90a7a8d6e585d592?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium">
+  <iframe src="https://momento360.com/e/u/da66a83b51fc47b8a3c145c1557b8740?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium">
   </iframe>
 </div> -->
 
@@ -12,21 +12,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./dist/main.css" />
-  <title>Document</title>
+  <title>EtymoloGenius</title>
 </head>
 
 <body>
-  <div class="head-banner">EtymoloGenius</div>
+  <div class="head-banner"> </div>
+  <div id="etymologenius">EtymoloGenius</div>
 
   <form class="search-form">
     <input type="text" id="searchBar" placeholder="Lookup a word...">
-    <button id="submit" type="button" onclick="searchOutput()">submit</button>
+    <button id="submit" type="button" onclick="searchOutput()">Go!</button>
   </form>
   <div id="part-of-speech"></div>
   <div id="output"></div>
+  <div id="placeholder-text">Welcome to EtymoloGenius! Simply submit a word, and watch its journey to English.</div>
   <div id="pronunciation"></div>
   <div id="definition"></div>
-  <div id="languages">languages</div>
+  <div id="country-list"></div>
 
    
     
@@ -62,6 +64,7 @@
 
       function searchOutput() {
           var userInput = document.getElementById('searchBar').value;
+          document.getElementById("placeholder-text").style.display = "none";
           document.getElementById('output').innerHTML = userInput;
 
           // fetching from dictionary API
@@ -89,7 +92,7 @@
               return null
             } else {
               drawLines(coords);
-              panToOriginCountry(coords[0]);
+              panToOriginCountry(coords.reverse()[0]);
             }      
           }
 
@@ -112,20 +115,30 @@
             }], 1000)
           }
 
-
+          function capitalize(string) {
+            answer = "";
+            let chars = string.split("");
+            chars.forEach((char,i) => {
+              i === 0 ? answer += char.toUpperCase() : answer += char
+            })
+            return answer;
+          }
 
           fetch(bigURL, { headers: { "app_id": app_id, "app_key": app_key } })
             .then(response => response.json())
             .then(data => {
+              console.log(data)
               const etymologyText = data.results[0].lexicalEntries[0].entries[0].etymologies[0];
               const partOfSpeech = data.results[0].lexicalEntries[0].lexicalCategory["id"];
               const definition = data.results[0].lexicalEntries[0].entries[0].senses[0].definitions[0];
               const pronunciation = data.results[0].lexicalEntries[0].entries[0].pronunciations[0].phoneticSpelling;
+              // const example = data.results[0].lexicalEntries[0].entries[0].senses[0].examples[0];
+              // console.log(example)
               document.getElementById('etymologies').innerHTML = etymologyText;
               document.getElementById('part-of-speech').innerHTML = partOfSpeech;
               document.getElementById('pronunciation').innerHTML = pronunciation;
               document.getElementById('definition').innerHTML = etymologyText + ";" + " " + definition;
-              extractLanguages(etymologyText);
+              document.getElementById('country-list').innerHTML = capitalize(userInput) + extractCountries(etymologyText);
               // extractTime(etymologyText);
               findCoordinates();
               resetSearch();
