--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <div id="etymologenius">EtymoloGenius</div>
   <div id="info-headers">
     <div onclick="modalAppears()">How to use</div>
-    <a href="https://www.linkedin.com/in/andrew-zessar-93067192/">LinkedIn</a>
-    <a href="https://github.com/azessar/EtymoloGenius">Github</a>
+    <a href="https://www.linkedin.com/in/andrew-zessar-93067192/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/azessar/EtymoloGenius" target="_blank">Github</a>
   </div>
   <div id="oxford">
     All definitions, etymologies, and pronunciations pulled from the Oxford Dictionaries API
