--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
       See any errors? Message me on LinkedIn!
       <br />
       <br />
-      NOTE: If normal words are not working, there is a CORS issue; go to:
-      https://cors-anywhere.herokuapp.com/https://od-api.oxforddictionaries.com/api/v2/
+      NOTE: If normal words are not working, there is a CORS issue; go to
+      <a
+        class="corslink"
+        href="https://cors-anywhere.herokuapp.com/https://od-api.oxforddictionaries.com/api/v2/"
+        >this link</a
+      >
       and click to allow access.
     </p>
   </div>
